# rust_sat_solver

./: Cargo.toml  README.md  _sat_solver  bench2latex.py  benchmark_results.tex
benches/: bench.py  bench.rs
data/: unsat.cnf
data/ai/hoos/Shortcuts/UF75.325.100/: uf75-01.cnf
data/nonogram/: 3.nonogram
data/sudoku/: sudoku9empty
sat_solver_macros/: Cargo.toml
sat_solver_macros/src/: lib.rs
src/: lib.rs  main.rs
src/command_line/: cli.rs  mod.rs
src/nonogram/: mod.rs  solver.rs
src/ports/: kosat.rs  mod.rs
src/sat/: assignment.rs  cdcl.rs  clause.rs  clause_management.rs  clause_storage.rs  cnf.rs  configs.rs  conflict_analysis.rs  dimacs.rs  dpll.rs  expr.rs  literal.rs  mod.rs  phase_saving.rs  preprocessing.rs  propagation.rs  restarter.rs  solver.rs  state.rs  trail.rs  variable_selection.rs  vsids.rs  watch.rs
src/smt/: mod.rs  solver.rs
src/sudoku/: mod.rs  solver.rs
