[package]
name = "sat_solver"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.25"
rand = "0.9.0"
ordered-float = "5.0.0"
smallvec = { version = "1.14.0", features = ["const_generics", "const_new"] }
num = "0.4.3"
itertools = "0.14.0"
bit-vec = "0.8.0"
dary_heap = "0.3.7"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
