[package]
name = "sat_solver"
version = "0.1.0"
edition = "2024"
authors = ["Jacob Edwards <jacob.edwards.dev@gmail.com>"]
description = "A SAT solver implemented in Rust, focusing on performance, efficiency and experimentation."
license = "MIT"
repository = "https://github.com/jacobjedwards/rust_sat_solver"
homepage = "https://github.com/jacobjedwards/rust_sat_solver"
documentation = "https://docs.rs/sat_solver"
readme = "README.md"
keywords = ["SAT", "solver", "logic", "cnf", "dpll"]
categories = ["algorithms", "science", "command-line-utilities"]


[dependencies]
ordered-float = "5.0.0"
smallvec = { version = "1.14.0", features = ["const_generics", "const_new"] }
itertools = "0.14.0"
bit-vec = "0.8.0"
tikv-jemallocator = "0.6.0"
fastrand = "2.3.0"
rustc-hash = "2.1.1"
clap = { version = "4.5.38", features = ["derive"] }
tikv-jemalloc-ctl = { version = "0.6.0", features = ["stats"] }

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[build]
rustflags = ["-C", "target-cpu=native", "-C", "opt-level=3"]

[[bench]]
name = "bench"
harness = false
